# RetSys

./: .gitignore  README.md  ReadME.md  pyproject.toml
indexing/: bm25.py  build_datasets.py  build_index.py  ingest_document.py  run_query.py
src/RetSys/indexing/: __init__.py  bm25.py  build_datasets.py  build_index.py  e5.py  grit.py  gtr.py  instructor.py  kv_store.py  retriever_run.py  run_query.py  utils.py
utils/: utils.py
